добавил класс user добавлены UserService, UserController, UserRepository покрыл API comments UserService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=ShelterBot
 
-telegram.bot.token=7044182090:AAElDSXVpJckhOVLDMwAnVq-iVBlFwUoML8
+telegram.bot.token=7044182090:AAEBDB--CTljzlQGamgsGIsIY8Zvp0o4Te8
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/enimalShelter
+spring.datasource.username=Bot
+spring.datasource.password=74481178
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
