добавил класс AnimalPhoto
добавлен AnimalPhotoRepository

связал таблицы AnimalPhoto <-> Animal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=74481178
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+
+animal.photo.dir.path = animalPhoto
